--- a/main.html
+++ b/main.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="static/css/main.css">
 
-    <title>Document</title>
+    <title>Typing Test</title>
 </head>
 
 <body>
@@ -40,7 +40,7 @@
                         </li>
 
                     </ul>
-                    <button >Try again</button>
+                    <button>Try again</button>
 
                 </div>
             </div>
@@ -48,9 +48,10 @@
     </div>
 
 
-   
-</body>
-    <script src="main.js"></script>
 
-    <script src="jquery-3.7.1.min.js"></script>
+</body>
+<script src="static/js/main.js"></script>
+
+<script src="static/js/jquery-3.7.1.min.js"></script>
+
 </html>
